Add 'Combine Invoices' workflow to Rewards pending view
